2006-02-13  Sven Neumann  <sven@gimp.org>

	* configure.in: output a nicer and more complete summary.

2006-02-12  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimplayer.c: remove extra semicolon; fix for
	bug #330882 from Jens Granseuer.

2006-02-09  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.3.8.

2006-02-08  Sven Neumann  <sven@gimp.org>

	* Made 2.3.7 development release.

2006-02-08  Roman Joost	<romanofski@gimp.org>

	* data/images/gimp-splash.png: splash screen for a new release

2006-02-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu.c: register menu branches for the
	web-browser script.

	* plug-ins/script-fu/scripts/web-browser.scm: string review.

2006-02-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpimagemaptool.c: use canonical property names.

2006-02-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/raw.c
	* plug-ins/gfig/gfig-dialog.c 
	* plug-ins/helpbrowser/dialog.c
	* plug-ins/imagemap/imap_browse.c
	* plug-ins/print/gimp_main_window.c: use canonical signal names.

2006-02-07  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpdrawablepreview.[ch]
	* libgimp/gimpzoompreview.c: reduced code duplication by exporting
	two GimpDrawablePreview functions for internal use.

2006-02-07  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpscrolledpreview.c
	(gimp_scrolled_preview_area_event): fixed check that suppresses
	the redraw for motion events that don't cause the preview to scroll.

2006-02-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangletool.c: applied a patch from Dennis
	Bjorklund that prevents a possible division by zero and fixes the
	calculation of the center point.

2006-02-07  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-gui.c
	* app/widgets/gimptoolbox.c: use GIMP_ACRONYM.

	* app/main.c (gimp_show_version): use GIMP_NAME.

	* app/about.h (GIMP_LICENSE): s/This program/GIMP/g

2006-02-06  Sven Neumann  <sven@gimp.org>
